# essentials_of_music

./: pyproject.toml  test.py
sound/: __init__.py  constants.py  test.py  wave_prop.py
sound/assets/: Kresge_Auditorium,_MIT_(interior_with_concert).jfif  __init__.py  assets.py  video.py
sound/assets/creatures/: __init__.py  bubbles.py  creature.py  creature_animations.py  creature_scene.py  quarter_creature.py  rest_creature.py  treble_creature.py
sound/chapter1/: README.md  chapter1.py  chapter1_narration.txt  citations.txt  manim.cfg  requests.txt
sound/chapter1/script/: SoundScript.txt
sound/chapter2/: chapter2.py  chapter2_narration.txt  manim.cfg  test.py
